--- a/mods/camps_castles_carriages.pw.toml
+++ b/mods/camps_castles_carriages.pw.toml
@@ -3,11 +3,11 @@ filename = "camps_castles_carriages-1.1.1.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/h9XxzZxe/versions/LqqVwUdr/camps_castles_carriages-1.1.1.jar"
 hash-format = "sha1"
 hash = "ab0c7a08e02752951392880a0433a98eb74d0628"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4954624
-project-id = 938667
+[update.modrinth]
+mod-id = "h9XxzZxe"
+version = "LqqVwUdr"
