--- a/mods/diagonal-fences.pw.toml
+++ b/mods/diagonal-fences.pw.toml
@@ -1,13 +1,13 @@
-name = "Diagonal Fences [Forge & Fabric]"
+name = "Diagonal Fences"
 filename = "DiagonalFences-v4.2.6-1.19.2-Forge.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/IKARgflD/versions/KbmgjzHt/DiagonalFences-v4.2.6-1.19.2-Forge.jar"
 hash-format = "sha1"
 hash = "b68f9dc270dda188bd0eb48c29b58b6e0a843a46"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4658720
-project-id = 458048
+[update.modrinth]
+mod-id = "IKARgflD"
+version = "KbmgjzHt"
